@@ -104,6 +104,7 @@ public class Spell_SummonArmy extends Spell
 				for(int i=0;i<num;i++)
 				{
 					MOB newMOB=CMClass.getMOB(choices[CMLib.dice().roll(1,choices.length,-1)]);
+					newMOB.addNonUninvokableEffect(CMClass.getAbility("Prop_ModExperience"));
 					newMOB.setLocation(mob.location());
 					newMOB.basePhyStats().setRejuv(PhyStats.NO_REJUV);
 					newMOB.recoverCharStats();
