@@ -2405,4 +2405,5 @@ ruthless programmer, and sentenced to a quick death.
 9. New Skill (Urban Tactics)
 10.New Clan Trophies: Most Members, and Highest Median Member Level
 11.Pregnancy will fail if either participant is exhausted or below 1/2 movement.  A message was added so the players know.
+12.Arcanists can LOOK at wand charges at level 30.
 
